--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "material-ui": "^0.20.0",
     "react": "^16.2.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
-    "react-simple-icons": "^1.0.0-beta.5"
+    "react-simple-icons": "^1.0.0-beta.5",
+    "react-typist": "^2.0.4",
+    "styled-components": "^3.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
