--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "gh-pages": "^1.1.0",
     "hoek": "^5.0.3",
     "material-ui": "^0.20.1",
     "react": "^16.4.0",
@@ -16,9 +17,12 @@
     "styled-components": "^3.3.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "homepage": "https://mannycolon.github.io"
 }
