--- a/package.json
+++ b/package.json
@@ -3,18 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
+    "@material-ui/core": "^1.4.3",
+    "@material-ui/icons": "^2.0.1",
+    "classnames": "^2.2.6",
     "gh-pages": "^1.1.0",
+    "history": "^4.7.2",
     "hoek": "^5.0.3",
-    "material-ui": "^0.20.1",
     "react": "^16.4.0",
-    "react-animations": "^1.0.0",
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.0",
-    "react-simple-icons": "^1.0.0-beta.5",
-    "react-typist": "^2.0.4",
-    "styled-components": "^3.3.0"
+    "react-scripts": "1.1.0"
   },
   "scripts": {
     "predeploy": "npm run build",
