--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-portfolio",
-  "version": "0.1.0",
+  "name": "mannycolon.tech",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.4.3",
@@ -15,12 +15,9 @@
     "react-scripts": "1.1.0"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "homepage": "https://mannycolon.github.io"
+  }
 }
